<resources>
    <string name="app_name">test_playground</string>

    <string name="CHARACTERISTICS">ХАРАКТЕРИСТИКИ</string>
    <string name="NAME">ИМЯ:</string>
    <string name="LEVEL">УРОВЕНЬ:</string>
    <string name="WORK">РАБОТА:</string>
    <string name="TITLE">ТИТУЛ:</string>
    <string name="HP">ОЗ:</string>
    <string name="MP">МП:</string>
    <string name="PWR">СИЛА:</string>
    <string name="DUR">СТОЙКОСТЬ:</string>
    <string name="AGI">ЛОВКОСТЬ:</string>
    <string name="INT">ИНТЕЛЕКТ:</string>
    <string name="PER">ВОСПРИЯТИЕ:</string>
    <string name="POINT_LEFT">ОСТАЛОСЬ ОЧКОВ:</string>
    <string name="WARNING">ОПОВЕЩЕНИЕ</string>
    <string name="YOU_GAIN">ВЫ ПОЛУЧИЛИ</string>
    <string name="LVLNOTENOUGH">ВАШ УРОВЕНЬ НЕДОСТАТОЧНО ВЫСОК, ЧТОБЫ СОВЕРШАТЬ ПОКУПКИ В МАГАЗИНЕ</string>
    <string name="ACTIVE">[АКТИВНЫЕ]</string>
    <string name="PASSIVE">[ПАССИВНЫЕ]</string>
    <string name="LVL">УР.</string>
    <string name="MUSCLE">МУСКУЛЫ</string>
    <string name="SPEED">РЫВОК</string>
    <string name="MAX">MAX</string>
    <string name="ITEM">ПРЕДМЕТ:</string>
    <string name="TYPE">ТИП:</string>
    <string name="LOCKED">НЕИЗВЕСТНОЕ</string>
    <string name="INVENTORY">ИНВЕНТАРЬ</string>
    <string name="SHOP">МАГАЗИН</string>
    <string name="FAILED">[ВЫ НЕ ЗАВЕРШИЛИ ЕЖЕДНЕВНЫЙ КВЕСТ, ТЕПЕРЬ ВЫ БУДЕТЕ В "ШТРАФНОЙ ЗОНЕ" В ТЕЧЕНИИ ОПРЕДЕЛЕННОГО ВРЕМЕНИ.]</string>
    <string name="INSTRUCTION">ИНСТРУКЦИЯ К КВЕСТУ</string>
    <string name="DAILYSCRIPT">ЕЖЕДНЕВНОЕ ЗАДАНИЕ: ПОДГОТОВИТЬСЯ К ТОМУ, ЧТОБЫ СТАТЬ СИЛЬНЕЕ</string>
    <string name="GOAL">ЦЕЛЬ</string>
    <string name="UNDONE">[НЕ ВЫПОЛНЕНО]</string>
    <string name="Done">[ВЫПОЛНЕНО]</string>
    <string name="pushup">ОТЖИМАНИЯ</string>
    <string name="LVLUP">[УРОВЕНЬ ПОВЫШЕН!]</string>
    <string name="PRESS">ПРЕСС</string>
    <string name="CLASSES">ЗАНЯТИЯ</string>
    <string name="WARNINGQUEST">ПРЕДУПРЕЖДЕНИЕ - НЕВЫПОЛНЕНИЕ ЕЖЕДНЕВНОГО ЗАДАНИЯ ПРИВЕДЕТ К НАКАЗАНИЮ, СООТВЕТСТВУЮЩЕМУ ЭТОМУ ЗАДАНИЮ</string>
    <string name="SYSTEMHELP">СИСТЕМА ПОМОЖЕТ РОСТУ "ИГРОКА"</string>
    <string name="WARNINGQUESTMUSTDONE">ЕСЛИ ОН НЕ ПОДЧИНИТСЯ ПРИКАЗАМ СИСТЕМЫ, ОН МОЖЕТ БЫТЬ НАКАЗАН.</string>
    <string name="YOURawards">ВЫ ПОЛУЧИЛИ СВОИ НАГРАДЫ.</string>
    <string name="reject">ОТКЛОНИТЬ</string>
    <string name="ACCEPT">ПРИНЯТЬ</string>
    <string name="COURAGEOFTHEWEAK">ВЫ ВЫПОЛНИЛИ ВСЕ НЕОБХОДИМЫЕ ТРЕБОВАНИЯ СЕКРЕТНОГО ЗАДАНИЯ "МУЖЕСТВО СЛАБЫХ"</string>
    <string name="WELCOME_PLAYER">ДОБРО ПОЖАЛОВАТЬ, ИГРОК</string>
    <string name="menu">МЕНЮ</string>
    <string name="naviki">НАВЫКИ</string>
    <string name="titles">ТИТУЛЫ</string>
    <string name="runing">БЕГ</string>
    <string name="tired">УСТАЛОСТЬ:</string>

    <string name="Telephone">Телефон</string>
    <string name="sms">Сообщения</string>
    <string name="contacts">Контакты</string>
    <string name="Chrome">Браузер</string>
    <string name="Camera">Камера</string>
    <string name="Settings">Настройки</string>
    <string name="All">Все приложения</string>
    <string name="Clock">Часы</string>
    <string name="gallery">Галерея</string>
    <string name="Телеграмм">Телеграмм</string>
    <string name="Whats_app">Whats app </string>
    <string name="ВКонтакте">ВКонтакте</string>
    <string name="Kakao_talk">Kakao talk</string>
    <string name="Aliexpress">Aliexpress</string>
    <string name="Genshin_impact">Genshin impact</string>
    <string name="Диктофон">Диктофон</string>
    <string name="Дискорд">Дискорд</string>
    <string name="Gmail">Gmail</string>
    <string name="Задачи">Задачи</string>
    <string name="Заметки">Заметки</string>
    <string name="LazyMedia_player">LazyMedia player</string>
    <string name="Почта">Почта</string>
    <string name="Сбербанк">Сбербанк</string>
    <string name="ТикТок">ТикТок</string>
    <string name="Отметки">Mihoyo</string>
    <string name="Шиори">Шиори</string>
    <string name="next">Следующая страница</string>
    <string name="back">Избранное</string>
    <string name="transport">Транспорт</string>
    <string name="razvlechenia">РАЗВЛЕЧЕНИЯ</string>
    <string name="play">Google Play</string>
    <string name="tools">ИНСТРУМЕНТЫ</string>
    <string name="music">Музыка</string>
    <string name="BattlePass">Задания</string>
    <string name="settingslauncher">Параметры</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>